--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tailwindcss/vite": "^4.2.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tiptap/pm": "^3.20.0",
+    "@tiptap/react": "^3.20.0",
+    "@tiptap/starter-kit": "^3.20.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
@@ -23,9 +26,11 @@
     "react-resizable-panels": "^4.6.5",
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.1",
+    "tiptap-markdown": "^0.9.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.3.1",
     "@types/react": "^19.1.8",
